@@ -28,6 +28,7 @@ import com.gentics.mesh.core.endpoint.node.BinaryUploadHandler;
 import com.gentics.mesh.core.rest.event.node.SchemaMigrationCause;
 import com.gentics.mesh.core.rest.node.NodeResponse;
 import com.gentics.mesh.core.rest.schema.SchemaModel;
+import com.gentics.mesh.core.verticle.handler.HandlerUtilities;
 import com.gentics.mesh.event.EventQueueBatch;
 import com.gentics.mesh.graphdb.spi.Database;
 import com.gentics.mesh.metric.MetricsService;
@@ -48,11 +49,13 @@ public class NodeMigrationHandler extends AbstractMigrationHandler {
 	private static final Logger log = LoggerFactory.getLogger(NodeMigrationHandler.class);
 
 	private final AtomicLong migrationGauge;
+	private final HandlerUtilities handlerUtilities;
 
 	@Inject
-	public NodeMigrationHandler(Database db, BinaryUploadHandler nodeFieldAPIHandler, MetricsService metrics, Provider<EventQueueBatch> batchProvider) {
+	public NodeMigrationHandler(Database db, BinaryUploadHandler nodeFieldAPIHandler, MetricsService metrics, Provider<EventQueueBatch> batchProvider, HandlerUtilities handlerUtilities) {
 		super(db, nodeFieldAPIHandler, metrics, batchProvider);
 		migrationGauge = metrics.longGauge(NODE_MIGRATION_PENDING);
+		this.handlerUtilities = handlerUtilities;
 	}
 
 	/**
@@ -111,7 +114,12 @@ public class NodeMigrationHandler extends AbstractMigrationHandler {
 			}
 
 		List<Exception> errorsDetected = migrateLoop(containers, cause, status, (batch, container, errors) -> {
-			migrateContainer(context, batch, container, fromVersion, newSchema, errors, touchedFields);
+			handlerUtilities.lock();
+			try {
+				migrateContainer(context, batch, container, fromVersion, newSchema, errors, touchedFields);
+			} finally {
+				handlerUtilities.unlock();
+			}
 			if (metrics.isEnabled()) {
 				migrationGauge.decrementAndGet();
 			}
